<resources>
    <string name="app_name">EvalucionT1_LGH</string>
    <string name="imagen_uem">Imagen UEM</string>
    <string name="btn_registrar_nota">Registrar nota</string>
    <string name="btn_consultar_nota">Consultar nota</string>
    <string name="tv_registro_de_nota">Registro de nota</string>
    <string name="et_selec_asig">Selecciona la asignatura</string>
    <string name="et_select_alumn">Selecciona el alumno</string>
    <string name="et_nota_de_examen">nota de examen</string>
    <string name="nota_de_actividades">nota de actividades</string>
    <string name="btn_selec_alumn">Seleccionar Alumno</string>
    <string name="btn_selec_asig">Seleccionar Asignatura</string>
    <string name="btn_calcular_nota">Calcular nota</string>
    <string name="et_nota_final">Nota final</string>
    <string name="btn_guardar_datos">Guardar datos</string>
    <string name="btn_limpiar_datos">Limpiar datos</string>
    <string name="seleccion_de_alumno">Seleccion de Alumno</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="alberto_barba_soriano">Alberto Barba Soriano</string>
    <string name="alvaro_blazquez_vallejo">Alvaro Blazquez Vallejo</string>
    <string name="raul_carrizo_martin">Raul Carrizo Martin</string>
    <string name="joana_casco_galea">Joana Casco Galea</string>
    <string name="javier_dominguez_fernandez">Javier Dominguez Fernandez</string>
    <string name="gabriel_fernandez_aguilera">Gabriel Fernandez Aguilera</string>
    <string name="amancio_javier_fernandez_lobo">Amancio Javier Fernandez Lobo</string>
    <string name="luis_gallego_herrero">Luis Gallego Herrero</string>
    <string name="daniel_gallo_romo">Daniel Gallo Romo</string>
    <string name="alberto_garcia_altez">Alberto Garcia Altez</string>
    <string name="carlos_garcia_hernandez">Carlos Garcia Hernandez</string>
    <string name="juan_manuel_guerra_arcas">Juan Manuel Guerra Arcas</string>
    <string name="marcos_gimenez_diaz">Marcos Gimenez Diaz</string>
    <string name="gonzalo_gonzalez_rodriguez">Gonzalo Gonzalez Rodriguez</string>
    <string name="jalil_martin_londres_blanes">Jalil Martin Londres Blanes</string>
    <string name="ignacio_martin_fernandez">Ignacio Martin Fernandez</string>
    <string name="javier_martinez_gomez">Javier Martinez Gomez</string>
    <string name="victor_perez_ramirez">Victor Perez Ramirez</string>
    <string name="lorenzo_saez_bejar">Lorenzo Saez Bejar</string>
    <string name="nicolas_suarez_ruiz">Nicolas Suarez Ruiz</string>
    <string name="liana_vilkelenoka">Liana Vilkelenoka</string>
    <string name="angel_zhang">Angel Zhang</string>
    <string name="et_selec_alumn">Seleccione el Alumno</string>
    <string name="tv_seleccion_de_asignatura">Seleccion de Asignatura</string>
    <string name="pmdm">PMDM</string>
    <string name="psp">PSP</string>
    <string name="ad">AD</string>
    <string name="di">DI</string>
    <string name="sge">SGE</string>
    <string name="iacc">IACC</string>
    <string name="ios">IOS</string>
    <string name="seleccione_la_asignatura">Seleccione la Asignatura</string>
    <string name="tv_consulta_de_notas_por_alumno">Consulta de Notas por Alumno</string>
    <string name="toast_registro">Se deben introducir todos los datos</string>
    <string name="toast_notas">Debes introducir todas las notas</string>
    <string name="space">"   "</string>
    <string name="toast_errorGuardar">Error al guardar</string>
</resources>